2018-03-28 Jan Kotanski <jan.kotanski@desy.de>
	* add signals from LineCut handles
	* add ComboBox for 1D x coorinate in LineCut
	* tagged as 1.13.0

2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* interpete warnings in projections
	* tagged as 1.12.2

2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* add missing sphinx docs
	* change size of bottom plot widget
	* tagged as 1.12.1

2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* add row and column slices in projections
	* tagged as 1.12.0

2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
	* add projections
	* fix issue with hanging qt events
	* tagged as 1.11.0

2018-03-23 Jan Kotanski <jan.kotanski@desy.de>
	* add 1d plot tool
	* tagged as 1.10.0

2018-03-22 Jan Kotanski <jan.kotanski@desy.de>
	* add sardana tips
	* tagged as 1.9.0

2018-03-21 Jan Kotanski <jan.kotanski@desy.de>
	* fix relation between CBF/TIFLoader and fabio/Pillow
	* fix apply mask
	* tagged as 1.8.2

2018-03-14 Jan Kotanski <jan.kotanski@desy.de>
	* remove clipping to hardcode value
	* tagged as 1.8.1

2018-03-13 Jan Kotanski <jan.kotanski@desy.de>
	* add mesh scan
	* add hidra data port to configuration
	* add hidra detector server list to configuration
	* fix disconnect tools
	* tagged as 1.8.0

2018-03-09 Jan Kotanski <jan.kotanski@desy.de>
	* add auto down sample switch
	* hide take motor button on move
	* tagged as 1.7.0

2018-03-07 Jan Kotanski <jan.kotanski@desy.de>
	* add move motors tool
	* tagged as 1.6.0

2018-03-07 Jan Kotanski <jan.kotanski@desy.de>
	* add support for json encoding in ZMQ stream source
	* tagged as 1.5.0

2018-02-28 Jan Kotanski <jan.kotanski@desy.de>
	* fix for auto level range
	* move info messages to tool widgets
	* move q-geometry to tool widgets
	* tagged as 1.4.0

2018-02-20 Jan Kotanski <jan.kotanski@desy.de>
	* make workaround for h5py 2.7.0 by no refresh() (fixed in h5py 2.7.1)
	* tagged as 1.3.1

2018-02-19 Jan Kotanski <jan.kotanski@desy.de>
	* add hide/show configuration options for ]image preparation