@@ -1,6 +1,7 @@
 2018-03-28 Jan Kotanski <jan.kotanski@desy.de>
 	* add signals from LineCut handles
 	* add ComboBox for 1D x coorinate in LineCut
+	* add error message from door for mesh macro
 	* tagged as 1.13.0
 
 2018-03-27 Jan Kotanski <jan.kotanski@desy.de>
